Fix header z-index

--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -4,7 +4,7 @@
   background-color: #fff;
   width: 100%;
   position: fixed;
-  z-index: 300;
+  z-index: 400;
 
   &__iso {
     position: absolute;
